test/parsetest/valid/lots_of_negs.java
class A {
    public void a(int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a, int[] a ){
        return !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!a[4];
    }
}