test/parsetest/invalid/redefinition_of_variable_in_same_scope7.java
class A {
  public static void main(String[] args) {
  }

  public void bla(int a, int b){
    if (a == 0) int b = 0;
  }
}